remove Phoenix header, fix canvas overflowing window height

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -2,6 +2,15 @@
 @import "./phoenix.css";
 @import "../node_modules/nprogress/nprogress.css";
 
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.flex {
+  display: flex;
+}
+
 /* LiveView specific classes for your customizations */
 .invalid-feedback {
   color: #a94442;
